--- a/style.css
+++ b/style.css
@@ -40,12 +40,17 @@ section{
     z-index: 100;
 }
 .logo{
+    text-decoration: none;;
     font-size: 2.5rem;
     color:var(--text-color);
     font-weight: 700;
     cursor: default;
 }
+.navbar{
+    margin-right: 150px;
+}
 .navbar a {
+text-decoration: none;
 font-size: 1.5rem;
 color: var(--text-color);
 margin-left: 4rem;
@@ -57,6 +62,7 @@ font-weight: 700;
 
 }
     #menu-icon{
+        margin-right: 50px;
         font-size: 3.6rem;
         color: var(--text-color);
         display: none;
@@ -102,6 +108,7 @@ line-height: 1.3;
     font-size: 1.6rem;
 }
 .social-media a{
+    text-decoration: none;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -123,6 +130,7 @@ line-height: 1.3;
 
 }
 .btn{
+    text-decoration: none;;
     display: inline-block;
     padding: 1rem 2.8rem;
     background: var(--main-color);
@@ -211,36 +219,39 @@ line-height: 1.3;
 
 }
 .portfolio-container{
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
 
+
 .portfolio-container .portfolio-box{
-    position: relative;
+    
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
+    flex-direction: column;
+    transition: .5s ease;
+    background-color: var(--bg-color);
 }
 
 .portfolio-box img{
+    height: 300px;
     width: 100%;
     transition: .5s ease;
-    opacity: 0.7;
+    
 }
 
-.portfolio-box:hover img{
-    transform: scale(1.1);
-}
+
 
 .portfolio-box .portfolio-layer{
-    position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    
     background:linear-gradient(rgba(0, 0, 0, 0.1) var(--main-color));
     display: flex;
     justify-content: center;
@@ -248,18 +259,20 @@ line-height: 1.3;
     flex-direction: column ;
     text-align: center;
     padding: 0 4rem;
-    transform: translateY(100%)
-    transition: .5s ease;
+    
+
 }
 
-.portfolio-box:hover .portfolio-layer{
-    transform: translateY(0);
+.portfolio-box:hover{
+    box-shadow: 0 0 1rem var(--main-color);
 }
 
 .portfolio-layer h4{
+    
     font-size: 3rem;
 }
 .portfolio-layer p{
+    
     font-size: 1.6rem;
     margin: .3rem 0 1rem;
 }
@@ -292,7 +305,7 @@ line-height: 1.3;
 
 .contact form .input-box{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -309,7 +322,7 @@ line-height: 1.3;
 }
 
 .contact form .input-box input {
-    width: 49%;
+    width: 50%;
 }
 
 .contact form textarea {
@@ -390,6 +403,7 @@ line-height: 1.3;
 
 @media(max-width: 768px){
     #menu-icon{
+        cursor: pointer;
         display:block;
     }
 
